feat : add structure and content

--- a/index.html
+++ b/index.html
@@ -12,5 +12,244 @@
     />
     <title>CV of Anastasia Prysiazhna</title>
   </head>
-  <body></body>
+  <body>
+    <aside>
+      <img src="/photo.jpg" alt="my photo" width="200" height="200"/>
+      <section>
+        <h3>contacts</h3>
+        <ul>
+          <li>
+            <a href="tel:+380666080702" title="+38 (066) - 608 - 07 - 02"
+              >+38 (066) - 608 - 07 - 02</a
+            >
+          </li>
+          <li>
+            <a
+              href="mailto:palitsanastasia3.ap@gmail.com"
+              title="palitsanastasia3.ap@gmail.com"
+              >palitsanastasia3.ap@gmail.com</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/anastasia-prysiazhna/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Linkedin</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/Anastasia-front"
+              target="_blank"
+              rel="noopener noreferrer"
+              >github</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://t.me/anastasia_prysiazhna"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Telegram</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://maps.app.goo.gl/aGRsaiJwBDzkLRLz9"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Current location: Odesa, Ukraine Planning to relocate soon</a
+            >
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>hard skills</h3>
+        <ul>
+          <li>HTML5 / CSS3 / SCSS</li>
+          <li>Responsive / Adaptive design</li>
+          <li>PYTHON / TS / JS / NEXT.JS / REACT / REDUX / REST API</li>
+          <li>Git / Github</li>
+          <li>NODE.JS / MONGO DB</li>
+        </ul>
+      </section>
+      <section>
+        <h3>soft skills</h3>
+        <ul>
+          <li>Willingness to learn</li>
+          <li>
+            Ability to work efficiently both individually and as part of a team
+          </li>
+          <li>
+            Hardworking / precise / responsible / reliable / punctual / flexible
+            / outgoing person
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>languages</h3>
+        <ul>
+          <li>English - upper-intermediate</li>
+          <li>Ukrainian - native</li>
+          <li>Russian - fluent</li>
+        </ul>
+      </section>
+    </aside>
+    <main>
+      <section>
+        <h1>PRYSIAZHNA ANASTASIA</h1>
+        <h2>junior Fullstack developer</h2>
+      </section>
+      <section>
+        <h3>summary</h3>
+        <p>
+          I am highly motivated aspiring specialist ready to join a team of
+          professionals. My work style focuses on self-improvement and achieving
+          collective and personal goals. Diligent in task execution, quickly
+          adapt to dynamic environment are important to me. With a diverse
+          background, have extensive knowledge of effective communication and
+          problem solving. Also, there's experience in the commercial sector.
+        </p>
+      </section>
+      <section>
+        <h3>project experience</h3>
+        <ul>
+          <li>
+            <span
+              ><a
+                href="https://https/portfolio-anastasia-front.vercel.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Portfolio</a
+              >
+              ,
+              <a
+                href="https://github.com/Anastasia-front/portfolio"
+                target="_blank"
+                rel="noopener noreferrer"
+                >github</a
+              >   (NEXT.JS, TS, SCSS, FRAMER MOTION, REACT HOOK FORM)</span
+            >
+            <p>
+              A website with all detailed information about me, my skills and
+              projects (contains adaptive layout, app-routing, two themes &
+              languages, various sliders, interactive elements, animations and
+              more). Role: developer.
+            </p>
+          </li>
+          <li>
+            <span
+              ><a
+                href="https://im-consulting.vercel.app"
+                target="_blank"
+                rel="noopener noreferrer"
+                >IM-CONSULTING</a
+              >
+              ,
+              <a
+                href="https://github.com/SoftRyzen-internship/IM-CONSULTING"
+                target="_blank"
+                rel="noopener noreferrer"
+                >github</a
+              >   (NEXT.JS, JS, TAILWIND CSS, AXIOS, HUSKY)</span
+            >
+            <p>
+              A web application designed for organizing and planning work (like
+              Trello). It includes features for creating, editing, tracking, and
+              deleting users, boards, tasks and columns. Role: team lead of
+              backend, developer. Task Pro , (NODE.JS, MONGO DB, REACT, JS, CSS,
+              REDUX) A website for creating a personal brand and attracting new
+              customers, partners. Client: Ilya Mushkovskyi, top consultant,
+              coach. Role: developer.
+            </p>
+          </li>
+          <li>
+            <span
+              ><a
+                href="https://450-kherson-humanitarian-landing-page.vercel.app"
+                target="_blank"
+                rel="noopener noreferrer"
+                >4.5.0</a
+              >
+              ,
+              <a
+                href="https://github.com/baza-trainee/450-kherson-humanitarian-landing-page"
+                target="_blank"
+                rel="noopener noreferrer"
+                >github</a
+              >   (NEXT.JS, TS, SCSS, REACT RESPONSIVE, STORYBOOK)</span
+            >
+            <p>
+              A website for a public organization '4.5.0' (Kherson and Kryvyi
+              Rih). IIt facilitates the registration of individuals for
+              humanitarian aid and allows for donations to the organization's
+              fund. Role: developer.
+            </p>
+          </li>
+          <li>
+            <span
+              ><a
+                href="https://tkachenko01001.github.io/project-REACT_NODE/welcome"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Task Pro</a
+              >
+              ,
+              <a
+                href="https://github.com/Tkachenko01001/project-REACT_NODE"
+                target="_blank"
+                rel="noopener noreferrer"
+                >github</a
+              >   (NODE.JS, MONGO DB, REACT, JS, CSS, REDUX)</span
+            >
+            <p>
+              A web application designed for organizing and planning work (like
+              Trello). It includes features for creating, editing, tracking, and
+              deleting users, boards, tasks and columns. Role: team lead of
+              backend, developer.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>work experience</h3>
+        <ul>
+          <li>DANCE STUDIO "СLIO"/ DIRECTOR AND CHOREOGRAPHER</li>
+          <li>STRETCHING STUDIO "ESS"/ FOUNDER AND TRAINER</li>
+        </ul>
+        <p>2017 - 2022</p>
+        <ul>
+          <li>Managed and mentored collaborators, overseeing studio work.</li>
+          <li>
+            Developed and implemented diverse activities to meet customer needs.
+          </li>
+          <li>Tracked budgets and tasks deadlines.</li>
+          <li>Stayed current with industry trends and innovations.</li>
+        </ul>
+      </section>
+      <section>
+        <h3>education</h3>
+        <ul>
+          <li>
+            <h4>Courses</h4>
+            <ul>
+              <li>
+                2023-2024 : IT School GoIT/ Python Data Science and Machine
+                Learning
+              </li>
+              <li>2022-2023 : IT School GoIT/ Fullstack Developer</li>
+            </ul>
+          </li>
+          <li>
+            <h4>universities</h4>
+            <ul>
+              <li>2018-2021 : Bachelor of Pedagogy/Choreography</li>
+              <li>2017-2020 : Bachelor of study program "State finance"</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
