refactor : add favicon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800"
       rel="stylesheet"
     />
+    <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="./favicon/apple-touch-icon.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="./favicon/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="./favicon/favicon-16x16.png"
+  />
+  <link rel="manifest" href="./favicon/site.webmanifest" />
     <title>CV of Anastasia Prysiazhna</title>
   </head>
   <body>
