--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/output.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,31 +12,31 @@
       rel="stylesheet"
     />
     <link
-    rel="apple-touch-icon"
-    sizes="180x180"
-    href="./favicon/apple-touch-icon.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="32x32"
-    href="./favicon/favicon-32x32.png"
-  />
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="16x16"
-    href="./favicon/favicon-16x16.png"
-  />
-  <link rel="manifest" href="./favicon/site.webmanifest" />
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
     <title>CV of Anastasia Prysiazhna</title>
   </head>
   <body>
     <aside>
-      <img src="/photo.jpg" alt="my photo" width="200" height="200"/>
+      <img class="mobile-none" src="/photo.jpg" alt="my photo" width="200" height="200" />
       <section>
         <h3>contacts</h3>
-        <ul>
+        <ul class="list-aside">
           <li>
             <a href="tel:+380666080702" title="+38 (066) - 608 - 07 - 02"
               >+38 (066) - 608 - 07 - 02</a
@@ -43,9 +44,9 @@
           </li>
           <li>
             <a
-              href="mailto:palitsanastasia3.ap@gmail.com"
-              title="palitsanastasia3.ap@gmail.com"
-              >palitsanastasia3.ap@gmail.com</a
+              href="mailto:prysiazhnastasia@gmail.com"
+              title="prysiazhnastasia@gmail.com"
+              >Prysiazhnastasia@gmail.com</a
             >
           </li>
           <li>
@@ -53,7 +54,7 @@
               href="https://www.linkedin.com/in/anastasia-prysiazhna/"
               target="_blank"
               rel="noopener noreferrer"
-              >Linkedin</a
+              >LinkedIn</a
             >
           </li>
           <li>
@@ -61,7 +62,7 @@
               href="https://github.com/Anastasia-front"
               target="_blank"
               rel="noopener noreferrer"
-              >github</a
+              >GitHub</a
             >
           </li>
           <li>
@@ -77,24 +78,33 @@
               href="https://maps.app.goo.gl/aGRsaiJwBDzkLRLz9"
               target="_blank"
               rel="noopener noreferrer"
-              >Current location: Odesa, Ukraine Planning to relocate soon</a
+              >Current location: Odessa, Ukraine
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://maps.app.goo.gl/hmqxf5nw9oGxB6m77"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Planning to relocate soon</a
             >
           </li>
         </ul>
       </section>
       <section>
         <h3>hard skills</h3>
-        <ul>
+        <ul class="list-disc list-aside">
           <li>HTML5 / CSS3 / SCSS</li>
           <li>Responsive / Adaptive design</li>
           <li>PYTHON / TS / JS / NEXT.JS / REACT / REDUX / REST API</li>
-          <li>Git / Github</li>
+          <li>Git / GitHub</li>
           <li>NODE.JS / MONGO DB</li>
         </ul>
       </section>
       <section>
         <h3>soft skills</h3>
-        <ul>
+        <ul class="list-disc list-aside">
           <li>Willingness to learn</li>
           <li>
             Ability to work efficiently both individually and as part of a team
@@ -107,7 +117,7 @@
       </section>
       <section>
         <h3>languages</h3>
-        <ul>
+        <ul class="list-disc list-aside">
           <li>English - upper-intermediate</li>
           <li>Ukrainian - native</li>
           <li>Russian - fluent</li>
@@ -116,6 +126,7 @@
     </aside>
     <main>
       <section>
+        <img class="tablet-none" src="/photo.jpg" alt="my photo" width="200" height="200" />
         <h1>PRYSIAZHNA ANASTASIA</h1>
         <h2>junior Fullstack developer</h2>
       </section>
@@ -132,13 +143,14 @@
       </section>
       <section>
         <h3>project experience</h3>
-        <ul>
+        <ul class="list-pb">
           <li>
             <span
               ><a
                 href="https://https/portfolio-anastasia-front.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
+                class="link-bold"
                 >Portfolio</a
               >
               ,
@@ -146,14 +158,16 @@
                 href="https://github.com/Anastasia-front/portfolio"
                 target="_blank"
                 rel="noopener noreferrer"
-                >github</a
-              >   (NEXT.JS, TS, SCSS, FRAMER MOTION, REACT HOOK FORM)</span
-            >
+                class="link-bold"
+                >GitHub</a
+              >
+              <br /><i>( NEXT.JS, TS, SCSS, FRAMER MOTION, REACT HOOK FORM )</i>
+            </span>
             <p>
               A website with all detailed information about me, my skills and
-              projects (contains adaptive layout, app-routing, two themes &
+              projects ( contains adaptive layout, app-routing, two themes &
               languages, various sliders, interactive elements, animations and
-              more). Role: developer.
+              more ). <span>Role: developer.</span>
             </p>
           </li>
           <li>
@@ -162,6 +176,7 @@
                 href="https://im-consulting.vercel.app"
                 target="_blank"
                 rel="noopener noreferrer"
+                class="link-bold"
                 >IM-CONSULTING</a
               >
               ,
@@ -169,17 +184,16 @@
                 href="https://github.com/SoftRyzen-internship/IM-CONSULTING"
                 target="_blank"
                 rel="noopener noreferrer"
-                >github</a
-              >   (NEXT.JS, JS, TAILWIND CSS, AXIOS, HUSKY)</span
-            >
+                class="link-bold"
+                >GitHub</a
+              >
+              <br /><i>( NEXT.JS, JS, TAILWIND CSS, AXIOS, HUSKY )</i>
+            </span>
             <p>
-              A web application designed for organizing and planning work (like
-              Trello). It includes features for creating, editing, tracking, and
-              deleting users, boards, tasks and columns. Role: team lead of
-              backend, developer. Task Pro , (NODE.JS, MONGO DB, REACT, JS, CSS,
-              REDUX) A website for creating a personal brand and attracting new
-              customers, partners. Client: Ilya Mushkovskyi, top consultant,
-              coach. Role: developer.
+              A web application designed for organizing and planning work ( like
+              Trello ). It includes features for creating, editing, tracking,
+              and deleting users, boards, tasks and columns.
+              <span>Role: team lead of backend, developer.</span>
             </p>
           </li>
           <li>
@@ -188,6 +202,7 @@
                 href="https://450-kherson-humanitarian-landing-page.vercel.app"
                 target="_blank"
                 rel="noopener noreferrer"
+                class="link-bold"
                 >4.5.0</a
               >
               ,
@@ -195,14 +210,16 @@
                 href="https://github.com/baza-trainee/450-kherson-humanitarian-landing-page"
                 target="_blank"
                 rel="noopener noreferrer"
-                >github</a
-              >   (NEXT.JS, TS, SCSS, REACT RESPONSIVE, STORYBOOK)</span
-            >
+                class="link-bold"
+                >GitHub</a
+              >
+              <br /><i>( NEXT.JS, TS, SCSS, REACT RESPONSIVE, STORYBOOK )</i>
+            </span>
             <p>
-              A website for a public organization '4.5.0' (Kherson and Kryvyi
-              Rih). IIt facilitates the registration of individuals for
+              A website for a public organization '4.5.0' ( Kherson and Kryvyi
+              Rih ). IIt facilitates the registration of individuals for
               humanitarian aid and allows for donations to the organization's
-              fund. Role: developer.
+              fund. <span>Role: developer.</span>
             </p>
           </li>
           <li>
@@ -211,6 +228,7 @@
                 href="https://tkachenko01001.github.io/project-REACT_NODE/welcome"
                 target="_blank"
                 rel="noopener noreferrer"
+                class="link-bold"
                 >Task Pro</a
               >
               ,
@@ -218,26 +236,28 @@
                 href="https://github.com/Tkachenko01001/project-REACT_NODE"
                 target="_blank"
                 rel="noopener noreferrer"
-                >github</a
-              >   (NODE.JS, MONGO DB, REACT, JS, CSS, REDUX)</span
-            >
+                class="link-bold"
+                >GitHub</a
+              >
+              <br /><i>( NODE.JS, MONGO DB, REACT, JS, CSS, REDUX )</i>
+            </span>
             <p>
-              A web application designed for organizing and planning work (like
-              Trello). It includes features for creating, editing, tracking, and
-              deleting users, boards, tasks and columns. Role: team lead of
-              backend, developer.
+              A web application designed for organizing and planning work ( like
+              Trello ). It includes features for creating, editing, tracking,
+              and deleting users, boards, tasks and columns.
+              <span>Role: team lead of backend, developer.</span>
             </p>
           </li>
         </ul>
       </section>
       <section>
         <h3>work experience</h3>
-        <ul>
-          <li>DANCE STUDIO "СLIO"/ DIRECTOR AND CHOREOGRAPHER</li>
-          <li>STRETCHING STUDIO "ESS"/ FOUNDER AND TRAINER</li>
+        <ul class="list-disc">
+          <li>DANCE STUDIO "CLIO" / DIRECTOR AND CHOREOGRAPHER</li>
+          <li>STRETCHING STUDIO "ESS" / FOUNDER AND TRAINER</li>
         </ul>
         <p>2017 - 2022</p>
-        <ul>
+        <ul class="list-disc">
           <li>Managed and mentored collaborators, overseeing studio work.</li>
           <li>
             Developed and implemented diverse activities to meet customer needs.
@@ -248,22 +268,22 @@
       </section>
       <section>
         <h3>education</h3>
-        <ul>
+        <ul class="list-pb">
           <li>
             <h4>Courses</h4>
             <ul>
               <li>
-                2023-2024 : IT School GoIT/ Python Data Science and Machine
+                2023 - 2024 : IT School GoIT / Python Data Science and Machine
                 Learning
               </li>
-              <li>2022-2023 : IT School GoIT/ Fullstack Developer</li>
+              <li>2022 - 2023 : IT School GoIT / Fullstack Developer</li>
             </ul>
           </li>
           <li>
             <h4>universities</h4>
             <ul>
-              <li>2018-2021 : Bachelor of Pedagogy/Choreography</li>
-              <li>2017-2020 : Bachelor of study program "State finance"</li>
+              <li>2018 - 2021 : Bachelor of Pedagogy / Choreography</li>
+              <li>2017 - 2020 : Bachelor of study program "State finance"</li>
             </ul>
           </li>
         </ul>
