refactor : change class names

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </section>
       <section>
         <h3>hard skills</h3>
-        <ul class="list-disc list-aside">
+        <ul class="list-marked list-aside">
           <li>HTML5 / CSS3 / SCSS</li>
           <li>Responsive / Adaptive design</li>
           <li>PYTHON / TS / JS / NEXT.JS / REACT / REDUX / REST API</li>
@@ -104,7 +104,7 @@
       </section>
       <section>
         <h3>soft skills</h3>
-        <ul class="list-disc list-aside">
+        <ul class="list-marked list-aside">
           <li>Willingness to learn</li>
           <li>
             Ability to work efficiently both individually and as part of a team
@@ -117,7 +117,7 @@
       </section>
       <section>
         <h3>languages</h3>
-        <ul class="list-disc list-aside">
+        <ul class="list-marked list-aside">
           <li>English - upper-intermediate</li>
           <li>Ukrainian - native</li>
           <li>Russian - fluent</li>
@@ -143,7 +143,7 @@
       </section>
       <section>
         <h3>project experience</h3>
-        <ul class="list-pb">
+        <ul class="list-paddingBottom">
           <li>
             <span
               ><a
@@ -252,12 +252,12 @@
       </section>
       <section>
         <h3>work experience</h3>
-        <ul class="list-disc">
+        <ul class="list-marked">
           <li>DANCE STUDIO "CLIO" / DIRECTOR AND CHOREOGRAPHER</li>
           <li>STRETCHING STUDIO "ESS" / FOUNDER AND TRAINER</li>
         </ul>
         <p>2017 - 2022</p>
-        <ul class="list-disc">
+        <ul class="list-marked">
           <li>Managed and mentored collaborators, overseeing studio work.</li>
           <li>
             Developed and implemented diverse activities to meet customer needs.
@@ -268,7 +268,7 @@
       </section>
       <section>
         <h3>education</h3>
-        <ul class="list-pb">
+        <ul class="list-paddingBottom">
           <li>
             <h4>Courses</h4>
             <ul>
