refactor : some changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css" />
+    <!-- <link rel="stylesheet" href="/styles.css" /> -->
     <link rel="stylesheet" href="/output.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,7 +33,13 @@
   </head>
   <body>
     <aside>
-      <img class="mobile-none" src="/photo.jpg" alt="my photo" width="200" height="200" />
+      <img
+        class="mobile-none"
+        src="/photo.jpg"
+        alt="my photo"
+        width="200"
+        height="200"
+      />
       <section>
         <h3>contacts</h3>
         <ul class="list-aside">
@@ -75,10 +81,18 @@
           </li>
           <li>
             <a
+              href="https://wa.me/380666080702"
+              target="_blank"
+              rel="noopener noreferrer"
+              >WhatsApp</a
+            >
+          </li>
+          <li>
+            <a
               href="https://maps.app.goo.gl/aGRsaiJwBDzkLRLz9"
               target="_blank"
               rel="noopener noreferrer"
-              >Current location: Odessa, Ukraine
+              >Current location: Odessa
             </a>
           </li>
           <li>
@@ -126,7 +140,13 @@
     </aside>
     <main>
       <section>
-        <img class="tablet-none" src="/photo.jpg" alt="my photo" width="200" height="200" />
+        <img
+          class="tablet-none"
+          src="/photo.jpg"
+          alt="my photo"
+          width="200"
+          height="200"
+        />
         <h1>PRYSIAZHNA ANASTASIA</h1>
         <h2>junior Fullstack developer</h2>
       </section>
@@ -271,7 +291,7 @@
         <ul class="list-paddingBottom">
           <li>
             <h4>Courses</h4>
-            <ul>
+            <ul class="padding-bottom">
               <li>
                 2023 - 2024 : IT School GoIT / Python Data Science and Machine
                 Learning
