--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="/styles/styles.css" /> -->
-    <link rel="stylesheet" href="/styles/output.css" />
+    <!-- <link rel="stylesheet" href="./styles/styles.css" /> -->
+    <link rel="stylesheet" href="./styles/output.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,7 +35,7 @@
     <aside>
       <img
         class="mobile-none"
-        src="/images/photo.jpg"
+        src="./images/photo.jpg"
         alt="my photo"
         width="200"
         height="200"
@@ -142,7 +142,7 @@
       <section>
         <img
           class="tablet-none"
-          src="/images/photo.jpg"
+          src="./images/photo.jpg"
           alt="my photo"
           width="200"
           height="200"
