refactor : add links to work places

--- a/index.html
+++ b/index.html
@@ -273,8 +273,28 @@
       <section>
         <h3>work experience</h3>
         <ul class="list-marked">
-          <li>DANCE STUDIO "CLIO" / DIRECTOR AND CHOREOGRAPHER</li>
-          <li>STRETCHING STUDIO "ESS" / FOUNDER AND TRAINER</li>
+          <li>
+            DANCE STUDIO
+            <a
+              href="https://l.instagram.com/?u=https%3A%2F%2Finstagram.com%2Fcliodance%3Figshid%3DOGQ5ZDc2ODk2ZA%253D%253D&e=AT2AlvNf5Rn_LTNwGoCjRQ5_b2qVcwRnOLilMoMSSXfmdkCdARRHQtGftpw2joZigX8UrbQH20lEOnql3Vsffq1O_Qk8gaGd4w-M_g"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="link-text"
+              >"CLIO"</a
+            >
+            / DIRECTOR AND CHOREOGRAPHER
+          </li>
+          <li>
+            STRETCHING STUDIO
+            <a
+              href="https://l.instagram.com/?u=https%3A%2F%2Finstagram.com%2Fenjoy_stretch_studio%3Figshid%3DOGQ5ZDc2ODk2ZA%253D%253D&e=AT2BrnNS7tTFyxJ5dZ1JRahjDYFLxx7KQ7T21hiGhtPDJyy39yAdQjrtSsnKNOzPyST-ZTVvDgF-ZHYDC_jfqVgYjq4bAS-U3w1rJQ"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="link-text"
+              >"ESS"</a
+            >
+            / FOUNDER AND TRAINER
+          </li>
         </ul>
         <p>2017 - 2022</p>
         <ul class="list-marked">
