fix : replace there's to there is

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           collective and personal goals. Diligent in task execution, quickly
           adapt to dynamic environment are important to me. With a diverse
           background, have extensive knowledge of effective communication and
-          problem solving. Also, there's experience in the commercial sector.
+          problem solving. Also, there is experience in the commercial sector.
         </p>
       </section>
       <section>
