refactor : change photo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <aside>
       <img
         class="mobile-none"
-        src="./images/photo.jpg"
+        src="./images/photo.gng"
         alt="my photo"
         width="200"
         height="200"
@@ -142,7 +142,7 @@
       <section>
         <img
           class="tablet-none"
-          src="./images/photo.jpg"
+          src="./images/photo.png"
           alt="my photo"
           width="200"
           height="200"
