fix : update extension of the photo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <aside>
       <img
         class="mobile-none"
-        src="./images/photo.gng"
+        src="./images/photo.png"
         alt="my photo"
         width="200"
         height="200"
